# skytemple

./: .gitignore  .gitmodules  BUILDING_MACOS.md  BUILDING_WINDOWS.md  Jenkinsfile  MANIFEST.in  Makefile  README.rst  build-blp-to-ui.ps1  build-blp-to-ui.sh  crowdin.yml  mem_profile.sh  mypy.ini  org.skytemple.SkyTemple.appdata.xml  org.skytemple.SkyTemple.desktop  pyproject.toml  requirements-dev.txt  requirements-frozen.txt  requirements-linux-flatpak.txt  requirements-mac-windows.txt  requirements-mac.txt  requirements.txt  requirements_type_checks.txt  setup.py  todo.txt
.github/: dependabot.yml
.github/workflows/: build-mac.yml  build-test-publish.yml  codeql-analysis.yml  release-info.yml  translations.yml
docs/: plugin_dev.rst  user_manual.rst
installer/: .gitignore  README.rst  _build.sh  build-fast.sh  build-fast2.sh  build-mac-arm.sh  build-mac.sh  build-windows.ps1  build-windows.sh  download-windows-dependencies-x86.sh  download-windows-dependencies.sh  gen_list_files_for_nsis.py  generate-mo.sh  install-skytemple-components-from-git.sh  install-skytemple-rust.sh  project.config  requirements-stage-2.txt  requirements.txt  skytemple-mac.spec  skytemple-windows.css  skytemple.nsi  skytemple.spec  skytemple32.nsi  windows_sign.bat
installer/linux-flatpak/: .gitignore  README.md  armips.patch  build-linux.sh  fixup_requirements.py  flatpak-pip-generator.py  generator--download-repo-with-submodules.sh  generator.py  org.skytemple.SkyTemple.appdata.xml  org.skytemple.SkyTemple.yml  org.skytemple.SkyTemple.yml.jinja  pip-add-extra-dependencies.toml  requirements.txt
installer/linux-flatpak/patches/: explorerscript_antlr_offline.patch
skytemple/: _i18n.py  app.py  init_locale.py  main.py  skytemple.css  skytemple.glade
skytemple/controller/: main.py  settings.py  tilequant.py  tilequant_dialog.py
skytemple/core/: abstract_module.py  canvas_scale.py  controller_loader.py  error_handler.py  global_configuration.py  img_utils.py  item_tree.py  list_icon_renderer.py  logger.py  message_dialog.py  model_context.py  module_controller.py  modules.py  open_request.py  profiling.py  rom_project.py  sentry.py  sentry_ext.py  settings.py  sprite_provider.py  string_provider.py  task.py  task_runner.py  ui_signals.py  ui_utils.py  view_loader.py
skytemple/core/async_tasks/: __init__.py  delegator.py  gbulb.py  now.py
skytemple/core/events/: abstract_listener.py  events.py  manager.py
skytemple/core/mapbg_util/: __init__.py  map_tileset_overlay.py
skytemple/core/plugin_loader/: __init__.py  finder.py  loader.py
skytemple/core/ssb_debugger/: context.py  manager.py  ssb_loaded_file_handler.py
skytemple/core/third_party_util/: cellrenderercustomtext.py
skytemple/core/widget/: __init__.py  sprite.py  status_page.py  user_feedback.py  view.py
skytemple/data/: empty.bma  empty.bpc  empty.bpl  empty.ssx  empty.wan
skytemple/data/fixed_floor/: dummy.dma
skytemple/data/locale/: skytemple.pot
skytemple/data/widget/: .gitignore  sprite.ui  status_page.ui  user_feedback.ui
skytemple/module/bgp/: module.py
skytemple/module/dungeon/: __init__.py  entity_rule_container.py  fixed_room_drawer.py  minimap_provider.py  module.py
skytemple/module/dungeon_graphics/: dungeon_bg_drawer.py  dungeon_chunk_drawer.py  module.py
skytemple/module/gfxcrunch/: module.py
skytemple/module/lists/: module.py  world_map_drawer.py
skytemple/module/map_bg/: animation_context.py  drawer.py  drawer_tiled.py  map_bg.glade  map_bg.glade~  module.py  todo.txt
(+408 files in other folders)
