[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "skytemple"
version = "1.6.0rc1"
authors = [
    {name = 'Marco "Capypara" Köpcke', email = "hello@capypara.de"},
    # see About dialog or GitHub contributors list for additional people.
]
description = "GUI Application to edit the ROM of Pokémon Mystery Dungeon Explorers of Sky"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["rom-hacking", "game-modding", "skytemple", "gtk"]
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "ndspy >= 3.0.0",
    "skytemple-files[spritecollab] >= 1.6.0rc1, < 1.7.0",
    "pmdsky-debug-py",  #  Whatever version skytemple-files requires.
    "skytemple-dtef >= 1.6.0, < 1.7.0",
    "skytemple-icons >= 1.3.2, < 1.7.0",
    "range-typed-integers >= 1.0.0",
    "pygobject >= 3.26.0",
    "pycairo >= 1.16.0",
    "natsort >= 7.0.0",
    "tilequant >= 1.0.0",
    "skytemple-ssb-debugger >= 1.6.0rc1, < 1.7.0",
    "pygal >= 2.4.0",
    "CairoSVG >= 2.4.2",
    "gbulb >= 0.6.2",
    "psutil >= 5.9.0",
    "sentry-sdk >= 1.5",
    "packaging",
    "wheel",
    "importlib_metadata>=4.6; python_version < '3.10'"
]

[project.urls]
Homepage = "https://skytemple.org"
Announcements = "https://blog.skytemple.org"
Documentation = "https://wiki.skytemple.org"
Downloads = "https://download.skytemple.org/skytemple"
Changelog = "https://download.skytemple.org/skytemple"
Repository = "https://github.com/SkyTemple/skytemple.git"
Issues = "https://github.com/SkyTemple/skytemple/issues"
Discord = "https://discord.gg/skytemple"

[project.optional-dependencies]
discord = ["pypresence >= 4.2.1"]
eventserver = ["skytemple-eventserver >= 1.6.0, < 1.7.0"]

[project.scripts]
skytemple = "skytemple.main:main"

[project.entry-points."skytemple.module"]
rom =               "skytemple.module.rom.module:RomModule"
bgp =               "skytemple.module.bgp.module:BgpModule"
tiled_img =         "skytemple.module.tiled_img.module:TiledImgModule"
map_bg =            "skytemple.module.map_bg.module:MapBgModule"
script =            "skytemple.module.script.module:ScriptModule"
gfxcrunch =         "skytemple.module.gfxcrunch.module:GfxcrunchModule"
sprite =            "skytemple.module.sprite.module:SpriteModule"
monster =           "skytemple.module.monster.module:MonsterModule"
portrait =          "skytemple.module.portrait.module:PortraitModule"
patch =             "skytemple.module.patch.module:PatchModule"
lists =             "skytemple.module.lists.module:ListsModule"
moves_items =       "skytemple.module.moves_items.module:MovesItemsModule"
misc_graphics =     "skytemple.module.misc_graphics.module:MiscGraphicsModule"
dungeon =           "skytemple.module.dungeon.module:DungeonModule"
dungeon_graphics =  "skytemple.module.dungeon_graphics.module:DungeonGraphicsModule"
strings =           "skytemple.module.strings.module:StringsModule"
spritecollab =      "skytemple.module.spritecollab.module:SpritecollabModule"

[tool.setuptools.packages.find]
exclude = ["installer", "docs"]
